--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "main": "index.js",
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node backEnd/server.js",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
